Fix popover overflow

--- a/src/devtools/global.styl
+++ b/src/devtools/global.styl
@@ -52,6 +52,9 @@ html, body
   font-size 16px
   color #444
 
+body
+  overflow hidden
+
 *
   box-sizing border-box
 
